# corona

./: .gitignore  corona.py  pyproject.toml
corona/: __init__.py  corona.py  models.py
tests/: test_corona.py
