[tool.poetry]
name = "corona"
version = "0.1.0"
description = ""
authors = ["Sambhav Choradia <sambhav.choradia@initbit.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
PTable = "^0.9.2"
flake8 = "^3.8.3"
pydantic = "^1.6.1"
typer = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
